# secondhand-vehicle-price-prediction-models

./: README.md  USAGE.md  pyproject.toml  setup.py
car_price_prediction/: __init__.py
car_price_prediction/config/: __init__.py
car_price_prediction/data/: __init__.py  loader.py  preprocessing.py  scraper.py
car_price_prediction/features/: __init__.py
car_price_prediction/models/: __init__.py  base.py
car_price_prediction/models/classification/: __init__.py  random_forest.py  train.py
car_price_prediction/models/regression/: __init__.py  random_forest.py  train.py
car_price_prediction/models/valuation/: __init__.py  ensemble_valuation.py  train.py  train_valuation.py
car_price_prediction/utils/: __init__.py  file_utils.py  logger.py  validation.py
car_price_prediction/visualization/: __init__.py
configs/: classification.yaml  regression.yaml  valuation.yaml
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: GITHUB_ACTIONS.md
outputs/logs/: .gitkeep
outputs/models/: .gitkeep
outputs/plots/: .gitkeep
scripts/: run_pipeline.py
tests/: __init__.py  conftest.py
